// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snack component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="el-intent-primary el-snack"
    role="status"
  />
</DocumentFragment>
`;

exports[`Snack component > should match a snapshot if an icon is supplied 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="el-intent-primary el-snack"
    role="status"
  >
    <span
      class="el-snack-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`SnackHolder component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-snack-holder"
  >
    <div
      aria-live="polite"
      class="el-intent-primary el-snack"
      role="status"
    >
      <span
        class="el-snack-icon"
      >
        <svg
          class="el-icon"
          color="inherit"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
          />
        </svg>
      </span>
      i am a snack
      <svg
        class="el-icon el-snack-close-icon"
        color="inherit"
        data-size="md"
        data-testid="close-icon"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12.36 13.83 5.66 5.66a1 1 0 1 0 1.41-1.41l-5.66-5.66 5.66-5.66a1 1 0 1 0-1.41-1.41l-5.66 5.66L6.7 5.35a1 1 0 0 0-1.41 0 1 1 0 0 0 0 1.41l5.66 5.66-5.66 5.66a1 1 0 0 0 0 1.41 1 1 0 0 0 1.41 0l5.66-5.66Z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
